Six basic sorts complete.

--- a/sort/README
+++ b/sort/README
@@ -1,5 +1,8 @@
-This file implements the 6 most common sorting types:
+This program implements the 6 most common sorting types:
 1) Bubble Sort
 2) Selection Sort
 3) Insertion Sort
 4) Heap Sort
+5) Merge Sort
+6) Quick Sort
+
